--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run the maven test
-      run: mvn --batch-mode test
+      run: mvn --batch-mode verify
