--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
+            <artifactId>jenkins-war</artifactId>
+            <version>2.164.3</version>
+            <scope>test</scope>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.main</groupId>
             <artifactId>jenkins-test-harness</artifactId>
             <version>2.64</version>
             <scope>test</scope>
@@ -70,18 +77,29 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.mkobit.jenkins.pipelines.shared-library</groupId>
-            <artifactId>com.mkobit.jenkins.pipelines.shared-library.gradle.plugin</artifactId>
-            <version>0.10.1</version>
-            <type>pom</type>
+            <groupId>org.jenkins-ci.modules</groupId>
+            <artifactId>sshd</artifactId>
+            <version>2.0</version>
             <scope>test</scope>
         </dependency>
 
-
-
-
     </dependencies>
     <build>
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}</directory>
+                <targetPath>testLibrary</targetPath>
+                <excludes>
+                    <exclude>.github/**</exclude>
+                    <exclude>.idea/**</exclude>
+                    <exclude>target</exclude>
+                    <exclude>test</exclude>
+                    <exclude>.gitignore</exclude>
+                    <exclude>pom.xml</exclude>
+                    <exclude>README.md</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
