--- a/test/resources/jobs/Jenkinsfile
+++ b/test/resources/jobs/Jenkinsfile
@@ -1,4 +1,13 @@
-def greet = "Hello World!"
-node() {
-  echo greet
-}
+// def greet = "Hello World!"
+// node() {
+//   echo greet
+// }
+
+@Library('testLibrary') _
+
+import info.palinc.HelloWorld
+
+//helloWorld
+
+def hW = new HelloWorld(this)
+hW.runMethod()
