resolve plugin dependency as well in advance

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,12 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    # Runs a set of commands using the runners shell
     - name: Download dependencies silently
-      run: mvn dependency:resolve -Dsilent=true
+      run: |
+        mvn --batch-mode dependency:resolve -Dsilent=true
+        mvn --batch-mode dependency:resolve-plugins -Dsilent=true
 
+    # Runs a single command using the runners shell
     - name: Run the maven test
       run: mvn --batch-mode verify
