--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <jenkinsVersion>2.164.3</jenkinsVersion>
+        <pluginPipelineJobVersion>2.32</pluginPipelineJobVersion>
+        <pluginPipelineGroovyVersion>2.66</pluginPipelineGroovyVersion>
+        <pluginPipelineBasicStepsVersion>2.15</pluginPipelineBasicStepsVersion>
+        <pluginPipelineNodesAndProcessesVersion>2.30</pluginPipelineNodesAndProcessesVersion>
+        <pluginPipelineApiVersion>2.33</pluginPipelineApiVersion>
+        <pluginPipeleineSharedGroovyLibrariesVersion>2.13</pluginPipeleineSharedGroovyLibrariesVersion>
+        <pluginPipelineVersion>2.5</pluginPipelineVersion>
+        <pluginPipelineMultibranchVersion>2.20</pluginPipelineMultibranchVersion>
+        <pluginPipelineStepApiVersion>2.19</pluginPipelineStepApiVersion>
+        <pluginPipelineSupportingApisVersion>3.2</pluginPipelineSupportingApisVersion>
+        <pluginPipelineDeclarativeVersion>1.3.8</pluginPipelineDeclarativeVersion>
+        <pluginFoldersVersion>6.7</pluginFoldersVersion>
     </properties>
     <dependencies>
         <dependency>
@@ -24,15 +38,15 @@
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>jenkins-core</artifactId>
-            <version>2.164.3</version>
+            <version>${jenkinsVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>jenkins-war</artifactId>
-            <version>2.164.3</version>
-            <scope>test</scope>
+            <version>${jenkinsVersion}</version>
             <type>war</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
@@ -43,78 +57,87 @@
         <dependency>
             <groupId>org.jenkins-ci.modules</groupId>
             <artifactId>sshd</artifactId>
-            <version>2.0</version>
+            <version>2.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.jenkins-ci</groupId>
+            <artifactId>symbol-annotation</artifactId>
+            <version>1.19</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
-            <version>2.15</version>
+            <version>${pluginPipelineJobVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps</artifactId>
-            <version>2.80</version>
+            <version>${pluginPipelineGroovyVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-basic-steps</artifactId>
-            <version>2.6</version>
+            <version>${pluginPipelineBasicStepsVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-durable-task-step</artifactId>
-            <version>2.17</version>
+            <version>${pluginPipelineNodesAndProcessesVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-api</artifactId>
-            <version>2.40</version>
+            <version>${pluginPipelineApiVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-cps-global-lib</artifactId>
-            <version>2.9</version>
+            <version>${pluginPipeleineSharedGroovyLibrariesVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-aggregator</artifactId>
-            <version>2.6</version>
+            <version>${pluginPipelineVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-multibranch</artifactId>
-            <version>2.21</version>
+            <version>${pluginPipelineMultibranchVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-step-api</artifactId>
-            <version>2.22</version>
+            <version>${pluginPipelineStepApiVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-support</artifactId>
-            <version>3.4</version>
+            <version>${pluginPipelineSupportingApisVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkinsci.plugins</groupId>
             <artifactId>pipeline-model-definition</artifactId>
-            <version>1.6.0</version>
+            <version>${pluginPipelineDeclarativeVersion}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-folder</artifactId>
-            <version>6.12</version>
+            <version>${pluginFoldersVersion}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -216,10 +239,6 @@
         <repository>
             <id>repo.jenkins-ci.org</id>
             <url>https://repo.jenkins-ci.org/public/</url>
-        </repository>
-        <repository>
-            <id>gradle-plugin</id>
-            <url>https://plugins.gradle.org/m2/</url>
         </repository>
     </repositories>
 
