--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
                     <includes>
                         <include>**/*ITSpec.java</include>
                     </includes>
+                    <systemProperties>
+                        <property>
+                            <name>java.util.logging.config.file</name>
+                            <value>test/resources/logging.properties</value>
+                        </property>
+                    </systemProperties>
                 </configuration>
             </plugin>
         </plugins>
