Use slf4j-jdk14 implementation for SLF4j to suppress "Failed to load class org.slf4j.impl.StaticLoggerBinder" message.

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>jenkins-core</artifactId>
             <version>${jenkinsVersion}</version>
