--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <pluginPipelineVersion>2.5</pluginPipelineVersion>
         <pluginPipelineMultibranchVersion>2.20</pluginPipelineMultibranchVersion>
         <pluginPipelineStepApiVersion>2.19</pluginPipelineStepApiVersion>
+        <pluginPipelineScmStepVersion>2.7</pluginPipelineScmStepVersion>
         <pluginPipelineSupportingApisVersion>3.2</pluginPipelineSupportingApisVersion>
         <pluginPipelineDeclarativeVersion>1.3.8</pluginPipelineDeclarativeVersion>
         <pluginFoldersVersion>6.7</pluginFoldersVersion>
@@ -129,6 +130,12 @@
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-scm-step</artifactId>
+            <version>${pluginPipelineScmStepVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-support</artifactId>
             <version>${pluginPipelineSupportingApisVersion}</version>
             <scope>test</scope>
@@ -148,21 +155,6 @@
 
     </dependencies>
     <build>
-        <testResources>
-            <testResource>
-                <directory>${project.basedir}</directory>
-                <targetPath>testLibrary</targetPath>
-                <excludes>
-                    <exclude>.github/**</exclude>
-                    <exclude>.idea/**</exclude>
-                    <exclude>target/**</exclude>
-                    <exclude>test/**</exclude>
-                    <exclude>.gitignore</exclude>
-                    <exclude>pom.xml</exclude>
-                    <exclude>README.md</exclude>
-                </excludes>
-            </testResource>
-        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
