--- a/test/resources/logging.properties
+++ b/test/resources/logging.properties
@@ -1,3 +1,7 @@
 handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 
-java.util.logging.ConsoleHandler.level=WARNING
+java.util.logging.ConsoleHandler.level=INFO
+
+#java.util.logging.FileHandler.level=FINEST
+#java.util.logging.FileHandler.pattern=%t/jenkins-test-harness%u.log
+#java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
